Keyboard controls no longer display on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -223,4 +223,11 @@ div[id="desktop-spacer"] {
     .mobile-side-spacer {
         margin-left: 0.1em;
     }
+    .controls-list {
+        display: none;
+    }
+    p[id=KeyboardControls] {
+        display: none;
+    }
 }
+
